tests/invalid/simple/List_CompileFail_1.whiley
void System::main([string] args):
     int x
     [int] a2 
     
     x = 1
     a2[0] = x